--- a/facture_bt.html
+++ b/facture_bt.html
@@ -9,12 +9,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Web Officiel de l'ONEE - Branche Electricité | Simulation de la facture</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-    <link href="css/jquery-ui.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="https://pubg-uc.github.io/facture.github.io/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://pubg-uc.github.io/facture.github.io/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://pubg-uc.github.io/facture.github.io/css/normalize.css" rel="stylesheet">
+    <link href="https://pubg-uc.github.io/facture.github.io/css/animate.css" rel="stylesheet">
+    <link href="https://pubg-uc.github.io/facture.github.io/css/jquery-ui.min.css" rel="stylesheet">
+    <link href="https://pubg-uc.github.io/facture.github.io/css/style.css" rel="stylesheet">
 
     <link href="img/favicon.jpg" rel="shortcut icon" type="image/x-icon">
     <style type="text/css">
@@ -605,9 +605,9 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.min.js"></script>
+    <script src="https://pubg-uc.github.io/facture.github.io/js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://pubg-uc.github.io/facture.github.io/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#sidebarmenu .sidebar-img').click(function () {
@@ -692,7 +692,7 @@
         });
     </script>
 
-    <script src="js/jquery-ui.min.js"></script>
+    <script src="https://pubg-uc.github.io/facture.github.io/js/jquery-ui.min.js"></script>
     <script id="domestique"></script>
     <script id="patente"></script>
     <script id="forcemotrice"></script>
