--- a/facture_bt.html
+++ b/facture_bt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<!-- Mirrored from www.one.org.ma/FR/Projet_Simulation/facture_bt.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Nov 2021 21:03:38 GMT -->
+<!-- Projet_Simulation/facture by joseph copyright -->
 <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta charset="utf-8">
@@ -787,5 +787,5 @@
 
 
 
-<!-- Mirrored from www.one.org.ma/FR/Projet_Simulation/facture_bt.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Nov 2021 21:04:31 GMT -->
+<!-- Projet_Simulation/facture by joseph copyright -->
 </body></html>
