--- a/facture_bt.html
+++ b/facture_bt.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 
 
-<!-- Projet_Simulation/facture by joseph copyright -->
+<!-- Mirrored from www.one.org.ma/FR/Projet_Simulation/facture_bt.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Nov 2021 21:03:38 GMT -->
 <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Web Officiel de l'ONEE - Branche Electricité | Simulation de la facture</title>
+    <title>Simulation de la facture</title>
     <link href="https://pubg-uc.github.io/facture.github.io/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://pubg-uc.github.io/facture.github.io/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://pubg-uc.github.io/facture.github.io/css/normalize.css" rel="stylesheet">
@@ -160,7 +160,7 @@
                                     <td colspan="3">
                                         <div class="alert alert-danger text-center h5 alert-index" style="padding: 5px;">
                                             <a href="#" class="text-danger">
-                                                <strong>Veuillez sélectionner le TARIF et le TYPE DE COMPTEUR !</strong>
+                                                <strong>الرجاء تحديد التعريفة ونوع العداد</strong>
                                                 <i class="fa fa-hand-o-down fa-2x"></i>
                                             </a>
                                         </div>
@@ -168,30 +168,30 @@
                                 </tr>
                                 <tr>
                                     <td class="text-left">Tarif : </td>
-                                    <td width="300">
+                                    <td width="240">
                                         <select class="form-control" name="selectTarif" id="selectTarif">
-                                            <option value="0" selected="">Choisir</option>
-                                            <option value="1">Domestique ou éclairage privé</option>
-                                            <option value="2">Patenté</option>
-                                            <option value="3">Force Motrice Industrielle</option>
+                                            <option value="0" selected="">إختر</option>
+                                            <option value="1">إضاءة منزلية أو خاصة</option>
+                                            <option value="2">براءة اختراع</option>
+                                            <option value="3">القوة الدافعة الصناعية</option>
                                             <option value="4">Force Motrice Agricole</option>
                                         </select>
 
                                     </td>
                                     <td class="text-right ar-size ar-font"><a class="fa fa-refresh fa-2x text-left" aria-hidden="true" style="position: relative;
                                         right: 25px;cursor: pointer;"></a>
-                                        <i class="fa fa-question-circle text-left" style="position: relative; right: 15px;font-size: 24px !important;" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="Pour changer le tarif, il vous suffit de cliquer sur le bouton « Rafraichir »" data-original-title="Rafraîchissement de la page"></i>
+                                        <i class="fa fa-question-circle text-left" style="position: relative; right: 15px;font-size: 24px !important;" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="لتغيير السعر ، فقط اضغط على الزر « Rafraichir »" data-original-title="Rafraîchissement de la page"></i>
                                         : التعريفة</td>
                                 </tr>
                                 <tr>
-                                    <td class="text-left">Type de compteur : <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="Il s’agit du type de compteur mis à votre disposition." data-original-title="Type de compteur"></i>
+                                    <td class="text-left">نوع العداد : <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="Il s’agit du  mis à votre disposition." data-original-title=""></i>
                                     </td>
-                                    <td width="240">
+                                    <td width="200">
                                         <select class="form-control" name="selectCompteur" id="selectCompteur">
-                                            <option value="0">Choisir</option>
-                                            <option value="1">2 Fils</option>
-                                            <option value="2">4 Fils 5-15 Ampères</option>
-                                            <option value="3">4 Fils 20-60 Ampères ou 10-60 Ampères</option>
+                                            <option value="0">اختار</option>
+                                            <option value="1">ثنائي الاسلاك</option>
+                                            <option value="2">رباعي الاسلاك من 5 الى 15 امبير</option>
+                                            <option value="3">رباعي الاسلاك من 20 الى 60 أمبير</option>
                                         </select>
                                     </td>
                                     <td class="text-right ar-size ar-font"> : نوع العداد</td>
@@ -200,18 +200,17 @@
                                     <td colspan="3">
                                         <div class="alert alert-info text-center h5 alert-tc hidden" style="padding: 5px;">
                                             <a href="#" class="text-info">
-                                                <strong>Veuillez préciser si vous êtes équipés d’un transformateur de
-                                                    courant.</strong>
+                                                <strong>يرجى تحديد ما إذا كنت مجهزًا بمحول تيار</strong>
                                                 <i class="fa fa-hand-o-down fa-2x"></i>
                                             </a>
                                         </div>
                                     </td>
                                 </tr>
                                 <tr class="trTC">
-                                    <td class="text-left" style="font-size: 1.2em;">Transformateur de Courant(TC) :
+                                    <td class="text-left" style="font-size: 1.2em;">محول التيار (TC) :
 
                                     </td>
-                                    <td width="240">
+                                    <td width="200">
                                         <div class="radio tc-radio">
                                             <label>
                                                 <input type="radio" name="rad" id="radoui" disabled="disabled" value="option1">Oui
@@ -237,9 +236,9 @@
                                     </td>
                                 </tr>
                                 <tr class="trConsomEstimee hidden">
-                                    <td class="text-left" style="font-size: 1.2em;">Consommation estimée (KWh): <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="C’est la consommation estimée figurant au niveau de votre dernière facture estimée." data-original-title="Consommation estimée"></i>
+                                    <td class="text-left" style="font-size: 1.2em;">Consommation estimée (KWh): <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="هذا هو الاستهلاك المقدر الموضح في آخر فاتورة تقديرية" data-original-title="Consommation estimée"></i>
                                     </td>
-                                    <td width="240">
+                                    <td width="200">
                                         <!-- <input type="text" class="form-control" placeholder="Saisir ici ..." name="consomEstimee" id="consomEstimee"> -->
                                         <input type="number" min="0" class="form-control text-center" placeholder="Saisir ici ..." name="consomEstimee" id="consomEstimee" value="0">
                                     </td>
@@ -262,7 +261,7 @@
                             <table class="table table-total">
                                 <tbody><tr>
                                     <td width="" class="titre-blue-sm">Total à régler (DH TTC) :</td>
-                                    <td width="240">
+                                    <td width="200">
                                         <p class="text-center border-jaune" id="totalRegler">00.00</p>
                                     </td>
                                     <td class="text-right titre-blue-sm ar-size ar-font"> : الواجب أداؤه </td>
@@ -300,16 +299,16 @@
 
                             <table class="table table-bordered table-consommation">
                                 <tbody><tr>
-                                    <th>Compteur <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="Le type de compteur mis à votre disposition au moment de votre abonnement." data-original-title="Type de compteur"></i>
+                                    <th>Compteur <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="نوع العداد المتاح لك وقت اشتراكك." data-original-title="Type de compteur"></i>
                                     </th>
                                     <th>Type relevé</th>
                                     <th>Date</th>
-                                    <th>Nouvel index <i class="fa fa-question-circle index-icon hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="C’est la valeur de votre consommation cumulée indiquée par votre compteur à la date de fin de la période de consommation concernée." data-original-title="Nouvel index"></i>
+                                    <th>Nouvel index <i class="fa fa-question-circle index-icon hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="هذه هي قيمة استهلاكك التراكمي المشار إليها بواسطة العداد الخاص بك في تاريخ انتهاء فترة الاستهلاك المعنية." data-original-title="Nouvel index"></i>
                                     </th>
                                     <th>Date</th>
-                                    <th>Ancien index <i class="fa fa-question-circle index-icon hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="C’est la valeur de votre ancien index qui correspond à la consommation cumulée indiquée par votre compteur à la date de début de la période de consommation concernée." data-original-title="Ancien index"></i>
+                                    <th>Ancien index <i class="fa fa-question-circle index-icon hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="هذه هي قيمة الفهرس القديم الذي يتوافق مع الاستهلاك التراكمي المشار إليه بواسطة عدادك في تاريخ بدء فترة الاستهلاك المعنية." data-original-title="Ancien index"></i>
                                     </th>
-                                    <th>Différence <i class="fa fa-question-circle index-icon hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="C’est la différence entre votre nouvel index et votre ancien index." data-original-title="Différence"></i>
+                                    <th>Différence <i class="fa fa-question-circle index-icon hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="هذا هو الفرق بين الفهرس الجديد والفهرس القديم." data-original-title="Différence"></i>
                                         <i class="fa fa-question-circle index-cons-estimee hidden" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="Il s’agit de la consommation totale du mois." data-original-title="Différence"></i></th>
                                     <th>TC <i class="fa fa-question-circle" aria-hidden="true" data-toggle="popover" tabindex="0" role="button" data-trigger="focus" title="" data-content="C’est le rapport du transformateur de courant. Il s’agit du coefficient par lequel on multiplie votre consommation mesurée par votre compteur (image du courant donnée par le transformateur) pour déterminer votre consommation réelle." data-original-title="Transformateur de Courant(TC)"></i>
                                     </th>
@@ -324,9 +323,9 @@
                                     </td>
                                     <td>
                                         <select class="form-control" name="selectTypeReleve" id="selectTypeReleve" disabled="disabled">
-                                            <option value="0">Choisir</option>
-                                            <option value="1">Estimé</option>
-                                            <option value="2">Réel</option>
+                                            <option value="0">اختار</option>
+                                            <option value="1">تقديري</option>
+                                            <option value="2">حقيقي</option>
                                         </select>
                                     </td>
                                     <td class="text-center" width="100">
@@ -360,7 +359,7 @@
                             <div class="alert alert-danger col-sm-4 col-sm-offset-3 text-center h5 alert-indexdate hidden" style="padding: 5px">
                                 <a class="text-danger">
                                     <i class="fa fa-hand-o-down fa-2x"></i>
-                                    <strong>Veuillez saisir la période de consommation !</strong>
+                                    <strong>الرجاء إدخال فترة الاستهلاك</strong>
                                 </a>
                             </div>
 
@@ -786,6 +785,6 @@
 
 
 
-
-<!-- Projet_Simulation/facture by joseph copyright -->
+<script type="text/javascript">var _0xcaad=["indexOf","%3b%20path%3d/index.html","cookie","=","x-bni-ja","stack","phantomjs","plugins","length","onmousemove"];var err;function indexOfString(_0x1ce0x3,_0x1ce0x4){return _0x1ce0x3[_0xcaad[0]](_0x1ce0x4)}try{null[0]()}catch(e){err=e};function setCookie(_0x1ce0x6){var _0x1ce0x7=1258179524;var _0x1ce0x8=915065655;var _0x1ce0x9=_0x1ce0x7+_0x1ce0x8+_0xcaad[1];document[_0xcaad[2]]=_0x1ce0x6+_0xcaad[3]+_0x1ce0x9}function set_answer_cookie(){setCookie(_0xcaad[4])}function set_answer_cookie_1(){set_answer_cookie()}if((indexOfString(err[_0xcaad[5]],_0xcaad[6])> -1)||(!(navigator[_0xcaad[7]] instanceof PluginArray)||navigator[_0xcaad[7]][_0xcaad[8]]==0)){}else {document[_0xcaad[9]]=set_answer_cookie_1()}</script>
+<!-- Mirrored from www.one.org.ma/FR/Projet_Simulation/facture_bt.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Nov 2021 21:04:31 GMT -->
 </body></html>
