--- a/facture_bt.html
+++ b/facture_bt.html
@@ -323,9 +323,9 @@
                                     </td>
                                     <td>
                                         <select class="form-control" name="selectTypeReleve" id="selectTypeReleve" disabled="disabled">
-                                            <option value="0">اختار</option>
-                                            <option value="1">تقديري</option>
-                                            <option value="2">حقيقي</option>
+                                            <option value="0">Choisir</option>
+                                            <option value="1">Estimé</option>
+                                            <option value="2">Réel</option>
                                         </select>
                                     </td>
                                     <td class="text-center" width="100">
